rabbitmq-operator/rabbitmq-operator_v1_Service_rabbitmq-operator-rabbitmq-messaging-topology-operator-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/instance: rabbitmq-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
    app.kubernetes.io/version: 1.14.2
    helm.sh/chart: rabbitmq-cluster-operator-4.3.18
  name: rabbitmq-operator-rabbitmq-messaging-topology-operator-webhook
  namespace: rabbitmq-operator
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https-webhook
  selector:
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/instance: rabbitmq-operator
    app.kubernetes.io/name: rabbitmq-cluster-operator
  sessionAffinity: None
  type: ClusterIP
