rabbitmq-operator/rabbitmq-operator_networking.k8s.io-v1_NetworkPolicy_rabbitmq-operator-rabbitmq-messaging-topology-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: messaging-topology-operator
    app.kubernetes.io/instance: rabbitmq-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq-cluster-operator
    app.kubernetes.io/part-of: rabbitmq
    app.kubernetes.io/version: 2.9.0
    helm.sh/chart: rabbitmq-cluster-operator-4.3.18
  name: rabbitmq-operator-rabbitmq-messaging-topology-operator
  namespace: rabbitmq-operator
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9443
  podSelector:
    matchLabels:
      app.kubernetes.io/component: messaging-topology-operator
      app.kubernetes.io/instance: rabbitmq-operator
      app.kubernetes.io/name: rabbitmq-cluster-operator
      app.kubernetes.io/part-of: rabbitmq
  policyTypes:
  - Ingress
  - Egress
